--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://github.com/Sreelaasy/SreeLaasya/blob/c55443c9a8327abffc71872f20f5a1a5db8e0062/Images/SreeLaasya%20image-modified%20(1).png" alt="👑Sreelaasya Picture"></td>
+            <td><img src="Images/SreeLaasyaimage-modified(1).png" alt="👑Sreelaasya Picture"></td>
             <td>   <h1> 👑Sreelaasya</h1>
                 <p><em>Studing in <strong><a href="https://www.facebook.com/SadhanaInfinityInternational/">SIIS</a> in 6-C.</strong></em> </p>
                 <p>I am student in <strong><a href="https://www.facebook.com/SadhanaInfinityInternational/">SIIS</a></strong>
